fix some minor spacing

--- a/style.css
+++ b/style.css
@@ -79,9 +79,8 @@ nav {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
   width: 100%;
-  height: 877px;
+  height: 100vh;
 
 }
 
